# scout

./: .editorconfig  .gitignore  404.html  CHANGELOG.md  CNAME  Cargo.toml  Makefile  README.md  about.html  acknowledgements.html  blog.html  index.html  markdown-page.html  rustfmt.toml  sitemap.xml  test.txt
apps/cargo-scout/: Cargo.toml
apps/cargo-scout-audit/: Cargo.toml  report.html
apps/cargo-scout-audit/src/: detectors.rs  lib.rs  main.rs  scout_config.rs  startup.rs
apps/cargo-scout-audit/src/detectors/: builder.rs  configuration.rs  library.rs
apps/cargo-scout-audit/src/output/: mod.rs  report.rs  utils.rs
apps/cargo-scout-audit/src/utils/: cargo.rs  cargo_package.rs  command.rs  detectors.rs  mod.rs  output.rs  path.rs
apps/cargo-scout-audit/tests/: README.md  integration_test.rs  integration_test_configuration.yaml
apps/cargo-scout-audit/tests/integration_tests/: detectors.rs  main.rs
apps/cargo-scout/src/: args.rs  detectors.rs  main.rs
apps/cargo-scout/src/detectors/: builder.rs  configuration.rs  library.rs
apps/cargo-scout/src/utils/: cargo_package.rs  command.rs  detectors.rs  env.rs  mod.rs  rustup.rs
apps/cargo-scout/tests/: integration_test.rs  integration_test_configuration.yaml  test.rs  test.sh
detectors/: Cargo.toml  README.md  rust-toolchain
detectors/assert-violation/: Cargo.toml
detectors/assert-violation/src/: lib.rs
detectors/avoid-autokey-upgradable/: Cargo.toml
detectors/avoid-autokey-upgradable/src/: lib.rs
detectors/avoid-core-mem-forget/: Cargo.toml
detectors/avoid-core-mem-forget/src/: lib.rs
detectors/avoid-format!-string/: Cargo.toml
detectors/avoid-format!-string/src/: lib.rs
detectors/avoid-format-string/: Cargo.toml
detectors/avoid-format-string/src/: lib.rs
detectors/avoid-std-and-core-mem/: Cargo.toml
detectors/avoid-std-and-core-mem/src/: lib.rs
detectors/avoid-unsafe-block/: Cargo.toml
detectors/avoid-unsafe-block/src/: lib.rs
detectors/buffering-unsized-types/: Cargo.toml
detectors/buffering-unsized-types/src/: lib.rs
detectors/delegate-call/: Cargo.toml  README.md
detectors/delegate-call/src/: lib.rs
detectors/divide-before-multiply/: Cargo.toml
detectors/divide-before-multiply/src/: lib.rs
detectors/dont-use-instantiate-contract-v1/: Cargo.toml
detectors/dont-use-instantiate-contract-v1/src/: lib.rs
detectors/dont-use-invoke-contract-v1/: Cargo.toml
detectors/dont-use-invoke-contract-v1/src/: lib.rs
detectors/dos-unbounded-operation/: Cargo.toml  README.md
detectors/dos-unbounded-operation/src/: lib.rs
detectors/dos-unexpected-revert-with-vector/: Cargo.toml  README.md
detectors/dos-unexpected-revert-with-vector/src/: lib.rs
detectors/incorrect-exponentiation/: Cargo.toml
detectors/incorrect-exponentiation/src/: lib.rs
detectors/ink-version/: Cargo.toml
detectors/ink-version/src/: lib.rs
detectors/insufficiently-random-values/: Cargo.toml  README.md
detectors/insufficiently-random-values/src/: lib.rs
detectors/integer-overflow-or-underflow/: Cargo.toml  README.md
detectors/integer-overflow-or-underflow/src/: lib.rs
detectors/iterators-over-indexing/: Cargo.toml
detectors/iterators-over-indexing/src/: lib.rs
detectors/lazy-delegate/: Cargo.toml
detectors/lazy-delegate/src/: lib.rs
detectors/lazy-mut-get-not-set/: Cargo.toml
detectors/lazy-mut-get-not-set/src/: lib.rs  notes.tx
detectors/lazy-values-not-set/: Cargo.toml
detectors/lazy-values-not-set/src/: lib.rs
detectors/non-payable-transferred-value/: Cargo.toml
detectors/non-payable-transferred-value/src/: lib.rs
detectors/overflow-check/: Cargo.toml
detectors/overflow-check/src/: lib.rs
detectors/panic-error/: Cargo.toml
detectors/panic-error/src/: lib.rs
detectors/reentrancy/: README.md
detectors/reentrancy-1/: Cargo.toml
detectors/reentrancy-1/src/: lib.rs
detectors/reentrancy-2/: Cargo.toml
detectors/reentrancy-2/src/: lib.rs
detectors/reentrancy-mir/: Cargo.toml
detectors/reentrancy-mir/src/: lib.rs
detectors/reentrancy/reentrancy-1/src/: lib.rs
detectors/reentrancy/reentrancy-2/: Cargo.toml
detectors/reentrancy/reentrancy-2/src/: lib.rs
detectors/reentrancy/reentrancy-2/ui/: main.rs
detectors/set-code-hash/: Cargo.toml
detectors/set-code-hash/src/: lib.rs
detectors/set-contract-storage/: Cargo.toml  README.md
detectors/set-contract-storage/src/: lib.rs
detectors/unprotected-mapping-operation/: Cargo.toml  rust-toolchain
detectors/unprotected-mapping-operation/src/: lib.rs
detectors/unprotected-self-destruct/: Cargo.toml
detectors/unprotected-self-destruct/src/: lib.rs
detectors/unrestricted-transfer-from/: Cargo.toml  README.md
detectors/unrestricted-transfer-from/src/: lib.rs
detectors/unsafe-expect/: Cargo.toml  README.md
detectors/unsafe-expect/src/: lib.rs
detectors/unsafe-expect/ui/: main.rs
detectors/unsafe-unwrap/: Cargo.toml  README.md
detectors/unsafe-unwrap/src/: lib.rs
detectors/unstable-interface/: Cargo.toml
detectors/unstable-interface/src/: lib.rs
detectors/unused-return-enum/: Cargo.toml  README.md
detectors/unused-return-enum/src/: lib.rs
detectors/vec-considerations/: Cargo.toml
detectors/vec-considerations/src/: lib.rs
detectors/vec-could-be-mapping/: Cargo.toml
detectors/vec-could-be-mapping/src/: lib.rs
detectors/warning-sr25519-verify/: Cargo.toml
detectors/warning-sr25519-verify/src/: lib.rs
detectors/zero-or-test-address/: Cargo.toml
detectors/zero-or-test-address/src/: lib.rs
detectors/zero-or-test-address/zero-or-test-address-1/: Cargo.toml
scout-audit-clippy-utils/: Cargo.toml  README.md  rust-toolchain
scout-audit-internal/: Cargo.toml
scout-audit-internal/src/: detector.rs  lib.rs  lint_helper.rs  socket.rs
scout-audit-internal/src/detector/: ink_lint_message.rs  ink_vulnerability_info.rs  lint_message.rs  soroban_lint_message.rs
scout-audit-internal/src/socket-protobuf/: definition.proto
templates/detector/early-lint/: Cargo.toml  rust-toolchain
templates/detector/early-lint/src/: lib.rs
test-cases/delegate-call/: Cargo.toml
(+1004 files in other folders)
