[package]
name = "scout-audit-clippy-utils"
version = "0.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/rust-lang/rust-clippy"
description = "For internal usage by cargo-scout-audit."

[dependencies]
arrayvec = { version = "0.7", default-features = false }
if_chain = "1.0"
itertools = "0.10.1"
rustc-semver = "1.1"

[features]
deny-warnings = []
internal = []

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
