[package]
name = "scout-audit-internal"
version = "0.2.1"
edition = "2021"
authors = [
    "Agustin Aon <agustin.aon@coinfabrik.com>",
    "Arturo Beccar-Varela <arturo.beccar@coinfabrik.com>",
    "José García Crosta <jose.garcia.crosta@coinfabrik.com>",
    "Facundo Lerena <facundo.lerena@coinfabrik.com>",
    "Agustin Losiggio <agustin.losiggio@coinfabrik.com>",
    "Federico Pinho <federico.pinho@coinfabrik.com>",
    "Ariel Waissbein <ariel.waissbein@coinfabrik.com",
]
license = "MIT"
description = "Scout is an extensible open-source tool intended to assist ink! smart contract developers and auditors detect common security issues and deviations from best practices."
homepage = "https://coinfabrik.github.io/scout"
repository = "https://github.com/CoinFabrik/scout"
readme = "../README.md"
keywords = ["auditor", "rust", "security", "ink", "smart-contracts"]
categories = ["development-tools", "command-line-utilities"]

[features]
detector = ["dep:strum"]
lint_helper = [
    "dep:scout-audit-clippy-utils",
    "dep:serde_json"
]

[dependencies]
strum = { version = "0.25", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
scout-audit-clippy-utils = { version = "=0.2.1", path = "../scout-audit-clippy-utils", optional = true }
