[package]
name = "cargo-scout-audit"
version = "0.1.1"
edition = "2021"
authors = [
    "Agustin Aon <agustin.aon@coinfabrik.com>",
    "Arturo Beccar-Varela <arturo.beccar@coinfabrik.com>",
    "José García Crosta <jose.garcia.crosta@coinfabrik.com>",
    "Facundo Lerena <facundo.lerena@coinfabrik.com>",
    "Agustin Losiggio <agustin.losiggio@coinfabrik.com>",
    "Federico Pinho <federico.pinho@coinfabrik.com>",
    "Ariel Waissbein <ariel.waissbein@coinfabrik.com",
]
license = "MIT"
description = "Scout is an extensible open-source tool intended to assist ink! smart contract developers and auditors detect common security issues and deviations from best practices."
homepage = "https://coinfabrik.github.io/scout"
repository = "https://github.com/CoinFabrik/scout"
readme = "../../README.md"
keywords = ["auditor", "rust", "security", "ink", "smart-contracts"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
ansi_term = "0.12.1"
anyhow = "1"
atty = "0.2.14"
cargo = "0.72.2"
cargo_metadata = "0.17"
clap = { version = "4.3.0", features = ["derive"] }
dylint = "2.1.9"
env_logger = "0.10"
glob = { version = "0.3" }
itertools = "0.11"
log = "0.4"
openssl = "0.10.55"
git2 = "0.17.2"
libgit2-sys = "0.15.2"

[dev-dependencies]
colored = "2.0.0"
config = "0.13.3"
serde = { version = "1.0.163", features = ["derive"] }
