[package]
name = "cargo-scout-audit"
version = "0.2.1"
edition = "2021"
authors = [
    "Agustin Aon <agustin.aon@coinfabrik.com>",
    "Arturo Beccar-Varela <arturo.beccar@coinfabrik.com>",
    "José García Crosta <jose.garcia.crosta@coinfabrik.com>",
    "Facundo Lerena <facundo.lerena@coinfabrik.com>",
    "Agustin Losiggio <agustin.losiggio@coinfabrik.com>",
    "Federico Pinho <federico.pinho@coinfabrik.com>",
    "Ariel Waissbein <ariel.waissbein@coinfabrik.com",
]
license = "MIT"
description = "Scout is an extensible open-source tool intended to assist ink! smart contract developers and auditors detect common security issues and deviations from best practices."
homepage = "https://coinfabrik.github.io/scout"
repository = "https://github.com/CoinFabrik/scout"
readme = "../../README.md"
keywords = ["auditor", "rust", "security", "ink", "smart-contracts"]
categories = ["development-tools", "command-line-utilities"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "cargo-scout-audit"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1"
cargo = "0.72.2"
cargo_metadata = "0.17"
clap = { version = "4.3.0", features = ["derive"] }
dunce = "1.0.4"
dylint = { version = "2.3.0"}
env_logger = "0.10"
home = { version = "0.5.5" }
itertools = "0.11"
log = "0.4"
tempfile = "3.8"
regex = { version = "1.5", features = ["unicode"] }
serde_json = "1.0"

scout-audit-internal = { version = "=0.2.1", path = "../../scout-audit-internal", features = ["detector"] }

[dev-dependencies]
colored = "2.0.0"
config = "0.13.3"
serde = { version = "1.0.163", features = ["derive"] }
