[package]
name = "cargo-scout"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1"
atty = "0.2.14"
cargo = "0.70"
cargo_metadata = "0.15"
clap = { version = "4.3.0", features = ["derive"] }
dylint = "2.1.9"
env_logger = "0.10"
glob = { version = "0.3" }
itertools = "0.10.5"
log = "0.4"
