[package]
name = "divide-before-multiply"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
dylint_linting = "2.1.5"
if_chain = "1.0.2"

scout-audit-internal = { path = "../../scout-audit-internal", features = ["detector", "lint_helper"] }

[dev-dependencies]
dylint_testing = "2.1.5"

[package.metadata.rust-analyzer]
rustc_private = true
