[package]
edition = "2021"
name = "divide-before-multiply"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
if_chain = { workspace = true }
scout-audit-dylint-linting = { workspace = true }
clippy_wrappers = { workspace = true }
clippy_utils = { workspace = true }

[package.metadata.rust-analyzer]
rustc_private = true
