[package]
edition = "2021"
name = "dos-unexpected-revert-with-vector"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { workspace = true }
if_chain = { workspace = true }
scout-audit-dylint-linting = { workspace = true }

[package.metadata.rust-analyzer]
rustc_private = true
