[workspace]
exclude = [".cargo", "target"]
members = ["delegate-call-*/*"]
resolver = "2"

[workspace.dependencies]
ink = { version = "5.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"]}
ink_e2e = { version = "=5.0.0" }
delegate-call-divider = { path = "delegate-call-1/divider-example" }
delegate-call-exploiter-1 = { path = "delegate-call-1/exploiter-example" }

[profile.release]
codegen-units = 1
debug = 0
debug-assertions = false
lto = true
opt-level = "z"
overflow-checks = false
panic = "abort"
strip = "symbols"

[profile.release-with-logs]
debug-assertions = true
inherits = "release"

