[package]
name = "detector-name"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "1480cea393d0cee195e59949eabdfbcf1230f7f9" }
dylint_linting = "2.1.5"
if_chain = "1.0.2"

[dev-dependencies]
dylint_testing = "2.1.5"

[package.metadata.rust-analyzer]
rustc_private = true



