[package]
name = "remediated-avoid-autokey-upgradable"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []

[dependencies]
ink = { version = "5.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_e2e = "=5.0.0"

[profile.release]
overflow-checks = false

[profile.dev]
overflow-checks = false

[workspace.metadata.dylint]
libraries = [

   { path = "/home/flerena/coinfabrik/scout/scout/detectors/avoid-autokey-upgradable"},
]
