[package]
name = "avoid-unsafe-block-vulnerable-1"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []

[dependencies]
ink = { workspace = true }
scale = { workspace = true }
scale-info = { workspace = true }

[dev-dependencies]
ink_e2e = { workspace = true }

[profile.release]
overflow-checks = false

[profile.dev]
overflow-checks = false

