[package]
name = "delegate-call-remediated-1"
version = "0.1.0"
edition = "2021"
authors = ["[your_name] <[your_email]>"]

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []


[dependencies]
ink = { workspace = true }
scale = { workspace = true }
scale-info = { workspace = true }


[dev-dependencies]
ink_e2e = { workspace = true }
delegate-call-divider = { workspace = true }

