[package]
name = "ink_version-vulnerable"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"


[dependencies]
ink = { workspace = true }
scale = { workspace = true }
scale-info = { workspace = true }

# Needed for compilation
ink_env = "=5.0.0"
ink_macro = "=5.0.0"
ink_metadata = "=5.0.0"
ink_prelude = "=5.0.0"
ink_primitives = "=5.0.0"
ink_storage = "=5.0.0"

[dev-dependencies]
ink_e2e = { workspace = true }

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []

