[package]
name = "unrestricted_transfer_from"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.1", default-features = false }
openbrush = { git = "https://github.com/brushfam/openbrush-contracts", tag = "3.1.1", default-features = false, features = ["psp22"] }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

psp22 = { package = "psp22_base_contract", path = "./psp22", default-features = false, features = ["ink-as-dependency"] }

[dev-dependencies]
ink_e2e = "4.2.1"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
  "ink/std",
  "scale/std",
  "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
